After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652439 - Can't open conversation tabs from the contact list if the conversation is open in the shell
Can't open conversation tabs from the contact list if the conversation is ope...
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Chat
3.1.x
Other Linux
: Normal normal
: 3.2
Assigned To: empathy-maint
Depends on:
Blocks: 654237
 
 
Reported: 2011-06-13 10:17 UTC by Will Thompson
Modified: 2011-07-11 12:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
coding style fixes (1.17 KB, patch)
2011-07-08 11:36 UTC, Guillaume Desmottes
committed Details | Review
Set the DelegateToPreferredHandler hint when requesting text channels (#652439) (1.06 KB, patch)
2011-07-08 11:37 UTC, Guillaume Desmottes
accepted-commit_now Details | Review

Description Will Thompson 2011-06-13 10:17:07 UTC
Preconditions:

• have the very latest versions of MC, Empathy, and Gnome Shell

Steps to reproduce:

• Have a conversation window open in the Shell;
• Find that contact in your Empathy contact list;
• Double-click them.

Expected results:

• An Empathy conversation tab pops up.

Actual results:

• The Shell bubble pops up.

Discussion:

This is because the Shell is the handler of the channel. The contact list uses EnsureChannel; so MC just calls HandleChannels() on the current handler.

A potential fix would be to include a hint with the channel request to say “delegate this please”; the Shell would look for that hint and, if present, delegate the channel to the PreferredHandler.
Comment 1 Guillaume Desmottes 2011-06-13 11:30:23 UTC
This needs some spec work: https://bugs.freedesktop.org/show_bug.cgi?id=38240
Comment 2 Guillaume Desmottes 2011-06-24 12:24:32 UTC
Fixed in https://bugzilla.gnome.org/show_bug.cgi?id=652439 but depends on the tp-glib branch to be merged and released.
Comment 3 Guillaume Desmottes 2011-07-08 11:36:59 UTC
Created attachment 191513 [details] [review]
coding style fixes
Comment 4 Guillaume Desmottes 2011-07-08 11:37:03 UTC
Created attachment 191514 [details] [review]
Set the DelegateToPreferredHandler hint when requesting text channels (#652439)

This ensures that Empathy will always handle and display the channel, even if
GNOME Shel is already handling it.
Comment 5 Emilio Pozuelo Monfort 2011-07-11 10:57:17 UTC
Comment on attachment 191513 [details] [review]
coding style fixes

Looks good
Comment 6 Emilio Pozuelo Monfort 2011-07-11 11:00:27 UTC
Comment on attachment 191514 [details] [review]
Set the DelegateToPreferredHandler hint when requesting text channels (#652439)

Looks good, the only issue is that the commit message is too long (the summary line), so it'd be good if you can make it a bit shorter.

++
Comment 7 Guillaume Desmottes 2011-07-11 12:41:39 UTC
Attachment 191513 [details] pushed as a446f3e - coding style fixes