coding style fixes

https://bugzilla.gnome.org/show_bug.cgi?id=652439